include exec processing in qbec
